test/Constraints/issue-54799.code
// RUN: %target-language-frontend -typecheck -verify %s

// https://github.com/apple/language/issues/54799

public protocol MyProtocol {}

public struct MyProtocolImpl: MyProtocol {}

public fn != (lhs: MyProtocol, rhs: MyProtocol) -> MyProtocolImpl {
  return MyProtocolImpl()
}

public fn && (lhs: MyProtocol, rhs: MyProtocol) -> MyProtocolImpl {
  return MyProtocolImpl()
}

fn check(a: Double, b: Int64) -> Bool {
  return a != 0 && b != 0 // Okay
}

fn check1() {
  immutable x: Int = 1
  immutable _ = UInt(1) << x - 1 // Okay
  immutable _ = UInt(1) << (x + 1) - 1 // Okay
}

fn check2() {
  immutable a: UInt32 = 0
  immutable b: UInt32 = 1 << (a + 16)
  immutable _ = a & b // Okay
}

fn check3() {
  immutable a: UInt32 = 0
  immutable b = 1 << (a + 16)
  immutable _ = a & b // Not okay, because 'b: Int'!
  // expected-error@-1 {{binary operator '&' cannot be applied to operands of type 'UInt32' and 'Int'}}
  // expected-note@-2 {{overloads for '&' exist with these partially matching parameter lists: (Int, Int), (UInt32, UInt32)}}
}
